// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sipster check static properties 1`] = `
Object {
  "full": "2.7.2",
  "major": 2,
  "minor": 7,
  "numeric": 34013696,
  "rev": 2,
  "suffix": "",
}
`;

exports[`sipster hang up the inbound call 1`] = `
Object {
  "content": "v=0
o=- DNC
s=pjmedia
b=AS:84
t=0 0
a=X-nat:0
m=audio 4004 RTP/AVP 0
c=IN IP4 DNC
b=TIAS:64000
a=rtcp:4005 IN IP4 DNC
a=sendrecv
a=rtpmap:0 PCMU/8000
",
  "headers": Object {
    "allow": "PRACK, INVITE, ACK, BYE, CANCEL, UPDATE, INFO, SUBSCRIBE, NOTIFY, REFER, MESSAGE, OPTIONS",
    "call-id": "DNC",
    "contact": Array [
      Object {
        "params": Object {},
        "uri": "sip:6001@127.0.0.1:5060;ob",
      },
    ],
    "content-length": "DNC",
    "content-type": "application/sdp",
    "cseq": Object {
      "method": "INVITE",
      "seq": "DNC",
    },
    "from": Object {
      "params": Object {
        "tag": "DNC",
      },
      "uri": "sip:6002@127.0.0.1",
    },
    "supported": "replaces, 100rel, timer, norefersub",
    "to": Object {
      "params": Object {
        "tag": "DNC",
      },
      "uri": "sip:6001@127.0.0.1",
    },
    "via": Array [
      Object {
        "host": "DNC",
        "params": Object {
          "branch": "DNC",
          "received": "127.0.0.1",
          "rport": "5062",
        },
        "port": 5062,
        "protocol": "UDP",
        "version": "2.0",
      },
    ],
    "x-test-header-name1": "test-header-value1",
    "x-test-header-name2": "test-header-value2",
  },
  "reason": "OK",
  "status": 200,
  "version": "2.0",
}
`;

exports[`sipster initialize pjsip 1`] = `
Object {
  "EpConfig": Object {
    "LogConfig": Object {
      "consoleLevel": 3,
      "decor": 25328,
      "fileFlags": 0,
      "filename": "",
      "level": 3,
      "msgLogging": 1,
    },
    "MediaConfig": Object {
      "audioFramePtime": 20,
      "channelCount": 1,
      "clockRate": 16000,
      "ecOptions": 0,
      "ecTailLen": 200,
      "hasIoqueue": true,
      "ilbcMode": 30,
      "jbInit": -1,
      "jbMax": -1,
      "jbMaxPre": -1,
      "jbMinPre": -1,
      "maxMediaPorts": 254,
      "noVad": false,
      "ptime": 0,
      "quality": 8,
      "rxDropPct": 0,
      "sndAutoCloseTime": 1,
      "sndClockRate": 0,
      "sndPlayLatency": 140,
      "sndRecLatency": 100,
      "threadCnt": 1,
      "txDropPct": 0,
      "vidPreviewEnableNative": true,
    },
    "UaConfig": Object {
      "mainThreadOnly": false,
      "maxCalls": 4,
      "mwiUnsolicitedEnabled": true,
      "nameserver": Array [],
      "natTypeInSdp": 1,
      "stunIgnoreFailure": true,
      "stunServer": Array [],
      "stunTryIpv6": false,
      "threadCnt": 1,
      "userAgent": "",
    },
  },
}
`;

exports[`sipster initialize pjsip 2`] = `1`;

exports[`sipster initialize pjsip 3`] = `254`;

exports[`sipster initialize pjsip 4`] = `"init"`;

exports[`sipster make an outbound call #2 1`] = `
Object {
  "content": "v=0
o=- DNC
s=pjmedia
b=AS:84
t=0 0
a=X-nat:0
m=audio 4002 RTP/AVP 0 8 96
c=IN IP4 DNC
b=TIAS:64000
a=rtcp:4003 IN IP4 DNC
a=sendrecv
a=rtpmap:0 PCMU/8000
a=rtpmap:8 PCMA/8000
a=rtpmap:96 telephone-event/8000
a=fmtp:96 0-16
",
  "headers": Object {
    "allow": "PRACK, INVITE, ACK, BYE, CANCEL, UPDATE, INFO, SUBSCRIBE, NOTIFY, REFER, MESSAGE, OPTIONS",
    "call-id": "DNC",
    "contact": Array [
      Object {
        "params": Object {},
        "uri": "sip:6001@127.0.0.1:5060;ob",
      },
    ],
    "content-length": "DNC",
    "content-type": "application/sdp",
    "cseq": Object {
      "method": "INVITE",
      "seq": "DNC",
    },
    "from": Object {
      "params": Object {
        "tag": "DNC",
      },
      "uri": "sip:6001@127.0.0.1",
    },
    "max-forwards": "70",
    "min-se": "90",
    "session-expires": "1800",
    "supported": "replaces, 100rel, timer, norefersub",
    "to": Object {
      "params": Object {
        "tag": "DNC",
      },
      "uri": "sip:6002@127.0.0.1",
    },
    "via": Array [
      Object {
        "host": "DNC",
        "params": Object {
          "branch": "DNC",
          "received": "127.0.0.1",
          "rport": 5060,
        },
        "port": 5060,
        "protocol": "UDP",
        "version": "2.0",
      },
    ],
  },
  "method": "INVITE",
  "uri": "sip:6002@127.0.0.1:5062",
  "version": "2.0",
}
`;

exports[`sipster make an outbound call 1`] = `
Object {
  "content": "v=0
o=- DNC
s=pjmedia
b=AS:84
t=0 0
a=X-nat:0
m=audio 4000 RTP/AVP 0 8 96
c=IN IP4 DNC
b=TIAS:64000
a=rtcp:4001 IN IP4 DNC
a=sendrecv
a=rtpmap:0 PCMU/8000
a=rtpmap:8 PCMA/8000
a=rtpmap:96 telephone-event/8000
a=fmtp:96 0-16
",
  "headers": Object {
    "allow": "PRACK, INVITE, ACK, BYE, CANCEL, UPDATE, INFO, SUBSCRIBE, NOTIFY, REFER, MESSAGE, OPTIONS",
    "call-id": "DNC",
    "contact": Array [
      Object {
        "params": Object {},
        "uri": "sip:6001@127.0.0.1:5060;ob",
      },
    ],
    "content-length": "DNC",
    "content-type": "application/sdp",
    "cseq": Object {
      "method": "INVITE",
      "seq": "DNC",
    },
    "from": Object {
      "params": Object {
        "tag": "DNC",
      },
      "uri": "sip:6001@127.0.0.1",
    },
    "max-forwards": "70",
    "min-se": "90",
    "session-expires": "1800",
    "supported": "replaces, 100rel, timer, norefersub",
    "to": Object {
      "params": Object {
        "tag": "DNC",
      },
      "uri": "sip:6002@127.0.0.1",
    },
    "via": Array [
      Object {
        "host": "DNC",
        "params": Object {
          "branch": "DNC",
          "received": "127.0.0.1",
          "rport": 5060,
        },
        "port": 5060,
        "protocol": "UDP",
        "version": "2.0",
      },
    ],
    "x-test-header-name": "test-header-value",
  },
  "method": "INVITE",
  "uri": "sip:6002@127.0.0.1:5062",
  "version": "2.0",
}
`;

exports[`sipster receive an inbound call 1`] = `
Object {
  "content": "",
  "headers": Object {
    "call-id": "DNC",
    "content-length": "DNC",
    "cseq": Object {
      "method": "INVITE",
      "seq": "DNC",
    },
    "from": Object {
      "params": Object {
        "tag": "DNC",
      },
      "uri": "sip:6002@127.0.0.1",
    },
    "to": Object {
      "params": Object {
        "tag": "DNC",
      },
      "uri": "sip:6001@127.0.0.1",
    },
    "via": Array [
      Object {
        "host": "DNC",
        "params": Object {
          "branch": "DNC",
          "received": "127.0.0.1",
          "rport": "5062",
        },
        "port": 5062,
        "protocol": "UDP",
        "version": "2.0",
      },
    ],
  },
  "reason": "Trying",
  "status": 100,
  "version": "2.0",
}
`;

exports[`sipster set up a SIP account, we need at least one 1`] = `
Object {
  "regExpiresSec": 0,
  "regIsActive": false,
  "regIsConfigured": true,
  "uri": "sip:6001@127.0.0.1",
}
`;

exports[`sipster set up a SIP account, we need at least one 2`] = `true`;

exports[`sipster set up a SIP account, we need at least one 3`] = `true`;

exports[`sipster set up a transport to listen for incoming connections, defaults to UDP 1`] = `
Object {
  "flags": 4,
  "info": undefined,
  "localAddress": "0.0.0.0:5060",
  "localName": undefined,
  "type": "UDP",
  "usageCount": 1,
}
`;

exports[`sipster set up a transport to listen for incoming connections, defaults to UDP 2`] = `true`;

exports[`sipster unregister account 1`] = `"running"`;

exports[`sipster unregister account 2`] = `
Object {
  "call": 1,
  "registered": 1,
  "registering": 1,
  "state": 1,
  "unregistered": 1,
  "unregistering": 1,
}
`;
